--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -1498,9 +1498,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'high_risk': 51361, 'low_risk': 46653})"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Resample the training data with SMOTEENN\n",
     "# Warning: This is a large dataset, and this step may take some time to complete\n",
@@ -1512,9 +1523,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(random_state=1)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
     "classifier.fit(X_resampled, y_resampled)"
@@ -1522,9 +1544,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.640324421824783"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Calculated the balanced accuracy score\n",
     "y_pred = logreg.predict(X_test)\n",
@@ -1533,9 +1566,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Predicted high_risk</th>\n",
+       "      <th>Predicted low_risk</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Actual high_risk</th>\n",
+       "      <td>67</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Actual low_risk</th>\n",
+       "      <td>6546</td>\n",
+       "      <td>10558</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Predicted high_risk  Predicted low_risk\n",
+       "Actual high_risk                   67                  34\n",
+       "Actual low_risk                  6546               10558"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Display the confusion matrix\n",
     "# Calculating the confusion matrix\n",
@@ -1549,9 +1633,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   pre       rec       spe        f1       geo       iba       sup\n",
+      "\n",
+      "  high_risk       0.01      0.66      0.62      0.02      0.64      0.41       101\n",
+      "   low_risk       1.00      0.62      0.66      0.76      0.64      0.41     17104\n",
+      "\n",
+      "avg / total       0.99      0.62      0.66      0.76      0.64      0.41     17205\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the imbalanced classification report\n",
     "print(classification_report_imbalanced(y_test, y_pred))"
